fix en el package json

--- a/react/package.json
+++ b/react/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.local.config.js",
   "scripts": {
     "build": "webpack-dev-server --config webpack.local.config.js",
-    "build:production": "webpack-dev-server --config webpack.production.config.js"
+    "build:production": "webpack --config webpack.production.config.js"
   },
   "author": "",
   "license": "ISC",
